# services_optimization

./: main.py  pyproject.toml  router.py  script.py
alembic/: env.py
alembic/versions/: 034627a711f2_baseline.py  4c67cde91258_first_migration.py
app/api/: __init__.py  gpt_api.py
app/components/: __init__.py  init_layout_component.py  wordpress_component.py
app/components/elite_chicago_spa/: botox_chicago.py  coolsculpting_in_chicago.py  facials_chicago.py  init_elite_chicago_spa.py  laser_hair_removal_in_chicago.py
app/config/: __init__.py  database_config.py
app/controller/: json_controller.py
app/controllers/: __init__.py  campaign_controller.py  campaign_controllers.py  design_controller.py  domain_controller.py  form_controller.py  form_controllers.py  indexing_controller.py  json_controller.py  page_controller.py  scheduled_controller.py  services.controller.py  services_controller.py
app/layouts/: elite_chicago_spa.json
app/layouts/elite_chicago_spa/: coolsculpting-in-chicago.json  laser-hair-removal-in-chicago.json
app/models/: ___init__.py  __init__.py  campaign.py  credential.py  design_element.py  domain.py  indexing.py  scheduled.py  services.py
app/utilities/: __init__.py  massive_creation.py  report_utilities.py  utils.py  wordpress_utilities.py
static/: report.xlsx
