[project]
name = "services-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "psycopg[binary]>=3.2.7",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.40",
    "unicorn>=2.1.3",
    "uvicorn>=0.34.2",
]
